--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@
   --valid-color: #28a745;
   --invalid-color: #ffa200;
   --primary-bg-color: #f6f9fe;
-  --primary-bg-color-2: linear-gradient(-47deg, #8731E8 0%, #4528DC 100%);
+  --primary-bg-color-2: linear-gradient(-47deg, #4DB053 0%, #53B87C 100%);
   --primary-bg-color-3: #ffffff;
   --primary-bg-color-4: rgba(16, 16, 45, 1);
   --nav-bg-color: #d3d3d3;
