Program pembekalan keahlian

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -47,3 +47,11 @@ h1.text--color-madrasah-dark {
 .logo-partner {
 	max-height: 100px;
 }
+
+.program-madrasah .program-icon {
+	background: #B9D67A;
+}
+
+.program-madrasah .program-icon .program-icon-assets {
+
+}
