--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,6 +3,10 @@
 	max-height: 60px;
 }
 
+.color--madrasah {
+	color: #B9D67A;
+}
+
 .text--color-madrasah-dark, 
 h1.text--color-madrasah-dark {
 	color: #1F4C63;
