--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,8 @@
 /*! Place your custom styles here */
+.bar__module .madrasah-menu.menu-horizontal li:not(:last-child) {
+    margin-right: 35px;
+}
+
 .logo.logo-madrasah {
 	max-height: 60px;
 }
@@ -50,10 +54,6 @@ h1.text--color-madrasah-dark {
 
 .logo-partner {
 	max-height: 100px;
-}
-
-.program-madrasah .program-icon {
-
 }
 
 .program-madrasah .program-icon .program-icon-asset {
